--- a/app/src/main/res/layout/fragment_routes_register.xml
+++ b/app/src/main/res/layout/fragment_routes_register.xml
@@ -39,18 +39,16 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 android:hint="Route No"
                 android:textColor="@color/black"
-                android:theme="@style/CardView"
-                android:spinnerMode="dropdown"
                 android:background="@drawable/custom_edittext"
                 android:entries="@array/choices"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 android:id="@+id/RouteNo"
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
@@ -59,11 +57,11 @@
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 android:id="@+id/Departure_Location"
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
@@ -72,11 +70,11 @@
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 android:id="@+id/Arrival_Location"
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
@@ -85,11 +83,24 @@
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
+                android:id="@+id/Date"
+                android:background="@drawable/custom_edittext"
+                android:drawablePadding="8dp"
+                android:hint="Date"
+                android:textColorHint="@color/black"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background"
+                android:layout_marginTop="20dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/Times"
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
@@ -98,13 +109,26 @@
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="25dp"/>
+                android:layout_marginTop="20dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/Price"
+                android:background="@drawable/custom_edittext"
+                android:drawablePadding="8dp"
+                android:hint="Price"
+                android:textColorHint="@color/black"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background"
+                android:layout_marginTop="20dp"/>
 
             <Button
                 android:id="@+id/registerButton"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="@color/teal_700"
                 android:text="Register"
                 android:textColor="@color/white"
