--- a/app/src/main/res/layout/result_items.xml
+++ b/app/src/main/res/layout/result_items.xml
@@ -21,11 +21,12 @@
 
         <ImageView
             android:id="@+id/list_pic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="60dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="59dp"
-            android:src="@drawable/_23456" />
+            android:layout_marginBottom="80dp"
+            android:layout_marginLeft="5sp"
+            android:src="@drawable/blue_bus_png_clipart_1079__1_" />
 
         <TextView
             android:id="@+id/listTile"
@@ -47,9 +48,10 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/list_pic"
-            android:text="Kurunegala"
             android:drawableStart="@drawable/track"
             android:drawableTint="@color/black"
+            android:text="Kurunegala"
+            android:textStyle="bold"
             android:textColor="@color/black" />
         <TextView
             android:id="@+id/end_location"
@@ -60,6 +62,7 @@
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/list_pic"
             android:text="Kandy"
+            android:textStyle="bold"
             android:drawableStart="@drawable/location"
             android:drawableTint="@color/black"
             android:textColor="@color/black" />
@@ -71,84 +74,98 @@
             android:layout_below="@id/end_location"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:paddingLeft="5dp"
             android:layout_toEndOf="@id/list_pic"
             android:drawableStart="@drawable/dot"
-            android:drawableTint="@color/black"
-            android:text="Make Travel easy with us"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="274dp"
-            android:layout_marginTop="26dp"
-            android:layout_toEndOf="@id/list_pic"
+            android:drawableTint="@color/purple_500"
             android:paddingLeft="5dp"
-            android:text="Rs 150.00"
-            android:textColor="@color/blue" />
+            android:text="Make Travel easy with us"
+            android:textSize="11dp"
+            android:textColor="@color/purple_500" />
 
-        <Button
-            android:id="@+id/op_btn"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_alignEnd="@+id/list_pic"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="-344dp"
-            android:textSize="12dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/teal_300"
-            android:text="Book" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!--        <TextView-->
+            <!--            android:id="@+id/bus_no"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_alignParentBottom="true"-->
+            <!--            android:layout_marginEnd="255dp"-->
+            <!--            android:layout_marginBottom="17dp"-->
+            <!--            android:layout_toStartOf="@+id/op_btn"-->
+            <!--            android:text="Bus No"-->
+            <!--            android:textColor="@color/black" />-->
 
-        <TextView
-            android:id="@+id/bus_no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="255dp"
-            android:layout_marginBottom="17dp"
-            android:layout_toStartOf="@+id/op_btn"
-            android:text="Bus No"
-            android:textColor="@color/black" />
+            <!--        <TextView-->
+            <!--            android:id="@+id/Route_no"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_alignParentBottom="true"-->
+            <!--            android:layout_marginEnd="126dp"-->
+            <!--            android:layout_marginBottom="17dp"-->
+            <!--            android:layout_toStartOf="@+id/op_btn"-->
+            <!--            android:text="Route Number"-->
+            <!--            android:textColor="@color/black" />-->
 
-        <TextView
-            android:id="@+id/Route_no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="126dp"
-            android:layout_marginBottom="17dp"
-            android:layout_toStartOf="@+id/op_btn"
-            android:text="Route Number"
-            android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/bus_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="125dp"
+                android:layout_marginEnd="280dp"
+                android:layout_marginBottom="16dp"
+                android:text="Bus No"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/op_btn"
+                android:layout_width="128dp"
+                android:layout_height="54dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="254dp"
+                android:layout_marginTop="95dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="11dp"
+                android:backgroundTint="@color/teal_700"
+                android:text="Book"
+                android:textColor="@color/white"
+                android:textSize="12dp" />
+
+            <TextView
+                android:id="@+id/Route_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="125dp"
+                android:layout_marginEnd="201dp"
+                android:layout_marginBottom="16dp"
+                android:text="Route Number"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="205dp"
+                android:layout_height="67dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="271dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="-74dp"
+                android:layout_marginBottom="79dp"
+                android:paddingLeft="5dp"
+                android:text="Rs 150.00"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<!--        <TextView-->
-<!--            android:id="@+id/bus_no"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginEnd="255dp"-->
-<!--            android:layout_marginBottom="17dp"-->
-<!--            android:layout_toStartOf="@+id/op_btn"-->
-<!--            android:text="Bus No"-->
-<!--            android:textColor="@color/black" />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/Route_no"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginEnd="126dp"-->
-<!--            android:layout_marginBottom="17dp"-->
-<!--            android:layout_toStartOf="@+id/op_btn"-->
-<!--            android:text="Route Number"-->
-<!--            android:textColor="@color/black" />-->
-
-    </RelativeLayout>
 </androidx.cardview.widget.CardView>
