--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
     <color name="hintColor"> #808080 </color>
-    <color name="teal_300">#D5DAD9</color>
+    <color name="teal_300">#E7F7F4</color>
     <color name="blue">#46E1EF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="red">#FF0000</color>
