--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -182,6 +182,7 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     style="@android:style/Widget.Button"
+                    android:id="@+id/singout"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginStart="32dp"
