--- a/app/src/main/res/layout/fragment_routes_register.xml
+++ b/app/src/main/res/layout/fragment_routes_register.xml
@@ -87,29 +87,37 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:id="@+id/Date"
+                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
+                android:drawableTint="@color/black"
                 android:background="@drawable/custom_edittext"
                 android:drawablePadding="8dp"
-                android:hint="Date"
-                android:textColorHint="@color/black"
+                android:hint="Travel Date"
+                android:textColorHint="@color/hintColor"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="40dp"
+                android:onClick="showDatePicker" />
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:id="@+id/Times"
                 android:background="@drawable/custom_edittext"
+                android:drawableTint="@color/black"
                 android:drawablePadding="8dp"
+                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                 android:hint="Time"
-                android:textColorHint="@color/black"
+                android:textColorHint="@color/hintColor"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="40dp"
+                android:onClick="showTimePicker" />
+
+
 
             <EditText
                 android:layout_width="match_parent"
